# riscv-vp-plusplus

./: .gitignore  CLAUDE.md
sw/: README.md
sw/usart2_verif/: CMakeLists.txt  README.md
sw/usart2_verif/bench/common/: bootstrap.S  platform.h
sw/usart2_verif/bench/driver/: usart_driver.h
sw/usart2_verif/bench/env/: env.h
sw/usart2_verif/bench/monitor/: monitor.h
sw/usart2_verif/bench/scoreboard/: scoreboard.h
sw/usart2_verif/docs/: USART_TestPlan.xlsx  USART_Verification_Plan.docx  coverage_summary.xlsx  generate_docx.py  generate_xlsx.py  usart_errata.xlsx
sw/usart2_verif/errata/: known_issues.txt
sw/usart2_verif/scripts/: archive_logs.sh  run_all.sh  run_single_test.sh
sw/usart2_verif/tests/advanced/: test_advanced.c
sw/usart2_verif/tests/clock/: test_clock.c
sw/usart2_verif/tests/datatype/: test_datatype.c
sw/usart2_verif/tests/functional/: test_functional.c
sw/usart2_verif/tests/loopback/: test_loopback.c
sw/usart2_verif/tests/memory_leak/: test_memory_leak.c
sw/usart2_verif/tests/negative/: test_negative.c
sw/usart2_verif/tests/performance/: test_performance.c
sw/usart2_verif/tests/reset/: test_reset.c
sw/usart2_verif/tests/rw/: test_rw.c
sw/usart2_verif/tests/stress/: test_stress.c
sw/usart2test/: Makefile  README.md  link.ld  main.c  main.elf
vp/src/platform/usart2test/: CMakeLists.txt  main.cpp  usart2.h
